# AdaptiveRAG

./: README.md  pyproject.toml
data/: README.md  gen_datasets.py
data/2wikimqa/answers/: answers.jsonl
data/2wikimqa/questions/: questions.jsonl
data/hotpotqa/answers/: answers.jsonl
data/hotpotqa/questions/: questions.jsonl
data/narrativeqa/answers/: answers.jsonl
data/narrativeqa/documents/: doc_106.txt  doc_107.txt  doc_119.txt  doc_128.txt  doc_136.txt  doc_145.txt  doc_157.txt  doc_16.txt  doc_161.txt  doc_169.txt  doc_173.txt  doc_190.txt  doc_194.txt  doc_197.txt  doc_27.txt  doc_31.txt  doc_83.txt  doc_87.txt  doc_95.txt
data/narrativeqa/questions/: questions.jsonl
data/qasper/answers/: answers.jsonl
data/qasper/questions/: questions.jsonl
deepseek_v3_tokenizer/: README.md
src/: cal_f1.py  chunking.py  customed_statistic.py  fetch_statistics.py  llm_inference.py  reranker.py  retriever.py  run.py  slm_inference.py  utils.py
src/matrix_factorization/: README.md  model.py  router.py  train_matrix_factorization.py
src/matrix_factorization/dataset_preparation/: gen_embeddings.py  gen_train_data.py
